--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 = Ruby HL7 Library README
 
+{<img src="https://travis-ci.org/salf/ruby-hl7.png?branch=master" alt="Build Status" />}[https://travis-ci.org/salf/ruby-hl7]
+
 A simple way to parse and create HL7 2.x messages with Ruby.
 
 Examples can be found in HL7::Message.
